--- a/HTML/contactUs.html
+++ b/HTML/contactUs.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Contact Us</title>
 </head>
-<body>
-$END$
-</body>
+    <body>
+    <a href="mailto:testgmail123@gmail.com?Subject=write%20your%20subject%20here&Body=write%20your%20body%20here">Mail Us</a><br>
+    <a href="tel:+910123456789">Call Me</a><br>
+    <a href="https:wa.me/0123456789">Whatsapp Me (Short variant)</a><br>
+    <a href="https://api.whatsapp.com/send?phone=0123456789&text=Hello,%20How're%20You">Whatsapp Me (Full variant)</a><br>
+    <hr>
+    <a href="index.html"> Home page</a><br>
+    <a href="myConfusions.html"> Confusions</a><br>
+    <a href="notes1.html"> Notes1</a><br>
+    <a href="downloadMedia.html"> Download Content</a>
+
+    </body>
 </html>
