--- a/HTML/myConfusions.html
+++ b/HTML/myConfusions.html
@@ -21,6 +21,6 @@
         <a href="index.html"> Home Page</a><br>
         <a href="notes1.html"> Notes1</a><br>
         <a href="contactUs.html"> Contact Us</a><br>
-        <a href="downloadMedia.html"> Contact Us</a>
+        <a href="downloadMedia.html"> Download Contents</a>
     </body>
 </html>
