adding new files: updated code

--- a/HTML/downloadMedia.html
+++ b/HTML/downloadMedia.html
@@ -2,15 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Download the Media</title>
+    <link rel="stylesheet" href="../css/cssForLinks.css">
 </head>
     <body>
-        <a href="EmptyPDF.pdf" download>Download pdf(EMPTY)</a><br>
-        <a href="SomeText.txt" download>Download txt(READ IT)</a><br>
+        <a class="links" href="../downloadables/EmptyPDF.pdf" download>Download pdf(EMPTY)</a><br>
+        <a class="links" href="../downloadables/SomeText.txt" download>Download txt(READ IT)</a><br>
+        <a class="links" href="../media/blinks_no_sake.mp3" download>blink no sake-(one piece) song</a><br>
+        <a class="links" href="../media/zoro.jpeg" download>download zoro image</a><br>
+        <a class="links" href="../media/nami.jpeg" download>download nami image</a><br>
+        <a class="links" href="../media/sanji.jpeg" download>download sanji image</a><br>
+        <a class="links" href="../media/chopper.jpeg" download>download chopper image</a><br>
+        <a class="links" href="../media/robin.avif" download>download robin image</a><br>
+        <a class="links" href="../media/franky.jpeg" download>download franky image</a><br>
+        <a class="links" href="../media/brook.jpeg" download>download brook image</a><br>
+        <a class="links" href="../media/jinbei.jpeg" download>download jinbei image</a><br>
+        <a class="links" href="../media/boa.avif" download>download boa hancock image</a><br>
         <hr>
-        <a href="index.html"> Home page</a><br>
-        <a href="myConfusions.html"> Confusions</a><br>
-        <a href="notes1.html"> Notes1</a><br>
-        <a href="contactUs.html"> Contact Us</a>
+        <a href="../index.html"> Back To Home page</a><br>
     </body>
 </html>
