adding css in redirecting links

--- a/html/attributes.html
+++ b/html/attributes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/cssForLinks.css">
     <title>What are Attributes in html</title>
 </head>
 <style>
@@ -50,6 +51,6 @@
         </li>
     </ol>
     <hr>
-    <a href="../index.html"> Back To Home page</a><br>
+    <a class="links" href="../index.html"> Back To Home page</a>
 </body>
 </html>
