--- a/html/grouping.html
+++ b/html/grouping.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/cssForLinks.css">
     <title>Grouping in html</title>
 </head>
     <body>
@@ -46,6 +47,6 @@
             <p>it is used for copyright and content information </p>
         </footer>
         <hr>
-        <a href="../index.html"> Back To Home page</a><br>
+        <a class="links" href="../index.html"> Back To Home page</a>
     </body>
 </html>
