--- a/html/listPage.html
+++ b/html/listPage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Lists</title>
+    <link rel="stylesheet" href="/css/cssForLinks.css">
 </head>
     <body>
     <h4>this is an unordered list</h4>
@@ -30,7 +31,7 @@
     </dl>
 
         <hr>
-        <a href="../index.html"> Back To Home page</a><br>
+        <a class="links" href="../index.html"> Back To Home page</a>
     </body>
 </html>
 <!--
