--- a/html/mediaAndInteractiveElements.html
+++ b/html/mediaAndInteractiveElements.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Media</title>
     <link rel="stylesheet" href="../css/mediaAndInteractiveElements.css">
+    <link rel="stylesheet" href="/css/cssForLinks.css">
 </head>
     <body>
         <video id="luffy_edit_video" class="video" title="luffy edit" controls>
@@ -41,7 +42,7 @@
         <img id="franky" class="image" src="../media/jinbei.jpeg" alt="sorry! its unavailable right now" title="i know Boa hancock is cute">
         
         <hr>
-        <a href="../index.html"> Back To Home page</a><br>  
+        <a class="links" href="../index.html"> Back To Home page</a>  
 
     </body>
 </html>
