--- a/html/merging.html
+++ b/html/merging.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Merging Table Example</title>
+    <link rel="stylesheet" href="/css/cssForLinks.css">
 </head>
 
     <body>
@@ -209,6 +210,6 @@
         </table>
         
         <hr>
-        <a href="../index.html"> Back To Home page</a><br>
+        <a class="links" href="../index.html"> Back To Home page</a>
     </body>
 </html>
