--- a/html/notes1.html
+++ b/html/notes1.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>My Notes 1</title>
+        <link rel="stylesheet" href="/css/cssForLinks.css">
     </head>
     <body>
         <pre>
@@ -154,6 +155,6 @@ like Google to understand and index images.
 
         </pre>
         <hr>
-        <a href="../index.html"> Back To Home page</a>
+        <a class="links" href="../index.html"> Back To Home page</a>
     </body>
 </html>
