--- a/html/downloadMedia.html
+++ b/html/downloadMedia.html
@@ -19,6 +19,6 @@
         <a class="links" href="../media/jinbei.jpeg" download>download jinbei image</a><br>
         <a class="links" href="../media/boa.avif" download>download boa hancock image</a><br>
         <hr>
-        <a href="../index.html"> Back To Home page</a><br>
+        <a class="links" href="../index.html"> Back To Home page</a>
     </body>
 </html>
