--- a/html/formsAndUserInput.html
+++ b/html/formsAndUserInput.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/cssForLinks.css">
     <title>Form and user Input</title>
     <style>
         #input_types{
@@ -217,7 +218,7 @@
 
         </div>
         <hr>
-        <a href="../index.html"> Back To Home page</a><br>
+        <a class="links" href="../index.html"> Back To Home page</a>
     </body>
 </html>
 <!--
