--- a/html/myFirstHtmlPage.html
+++ b/html/myFirstHtmlPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my html</title>
+    <link rel="stylesheet" href="/css/cssForLinks.css">
 </head>
 <body>
 
@@ -31,7 +32,7 @@
         </p>
 
         <hr>
-        <a href="../index.html"> Back To Home page</a><br>
+        <a class="links" href="../index.html"> Back To Home page</a>
     
 </body>
 </html>
