--- a/html/tablesAndDataRepresentation.html
+++ b/html/tablesAndDataRepresentation.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tables and Data Representation 1</title>
+    <link rel="stylesheet" href="/css/cssForLinks.css">
 </head>
     <body>
         <table border="4">
@@ -95,6 +96,6 @@
             <li>Notes: that there can be multiple body but there can only be 1 thead(table head) and only 1 tfoot(table footer)</li>
         </ol>
         <hr>
-        <a href="../index.html"> Back To Home page</a><br>
+        <a class="links" href="../index.html"> Back To Home page</a>
     </body>
 </html>
