--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
         <meta charset="UTF-8">
         <title> Welcome Page </title>
         <link rel="stylesheet" href="css/cssForLinks.css">
+        <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
-        <a class="links" href="html/notes1.html"> Notes1</a><br><br>
-        <a class="links" href="html/mediaAndInteractiveElements.html"> Watch Media Content</a><br><br>
-        <a class="links" href="html/contactUs.html"> Contact Us</a><br><br>
-        <a class="links" href="html/downloadMedia.html"> Download Content</a><br><br>
-        <a class="links" href="html/listPage.html"> List Page</a><br><br>
-        <a class="links" href="html/attributes.html">attributes</a><br><br>
-        <a class="links" href="html/grouping.html">grouping</a><br><br>
-        <a class="links" href="html/formsAndUserInput.html">forms and user Input</a><br><br>
-        <a class="links" href="html/tablesAndDataRepresentation.html">tables and data representation</a><br><br>
-        <a class="links" href="html/myFirstHtmlPage.html">my First HTML page</a><br><br>
-        <a class="links" href="html/merging.html">merging in tables</a><br><br>
-    </body>
+        <div id="linksContainer">
+
+            <a class="links" href="html/notes1.html"> Notes1</a><br><br>
+            <a class="links" href="html/mediaAndInteractiveElements.html"> Watch Media Content</a><br><br>
+            <a class="links" href="html/contactUs.html"> Contact Us</a><br><br>
+            <a class="links" href="html/downloadMedia.html"> Download Content</a><br><br>
+            <a class="links" href="html/listPage.html"> List Page</a><br><br>
+            <a class="links" href="html/attributes.html">attributes</a><br><br>
+            <a class="links" href="html/grouping.html">grouping</a><br><br>
+            <a class="links" href="html/formsAndUserInput.html">forms and user Input</a><br><br>
+            <a class="links" href="html/tablesAndDataRepresentation.html">tables and data representation</a><br><br>
+            <a class="links" href="html/myFirstHtmlPage.html">my First HTML page</a><br><br>
+            <a class="links" href="html/merging.html">merging in tables</a><br><br>
+            
+        </body>
+    </div>
 
 </html>
