updating css files package/file arrangment

--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/css/cssForLinks.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
     <body>
         <a href="mailto:someone@gmail.com?Subject=write%20your%20subject%20here&Body=write%20your%20body%20here">Mail Us</a><br>
