--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
         <title> Welcome Page </title>
         <link rel="stylesheet" href="css/cssForLinks.css">
         <link rel="stylesheet" href="/css/index.css">
+        <style>
+            #linksContainer{
+                position: absolute;
+                top: 30%;
+                left: 50%;
+            }
+        </style>
     </head>
+
     <body>
         <div id="linksContainer">
 
