--- a/html/mediaAndInteractiveElements.html
+++ b/html/mediaAndInteractiveElements.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Media</title>
     <link rel="stylesheet" href="../css/mediaAndInteractiveElements.css">
-    <link rel="stylesheet" href="/css/cssForLinks.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
     <body>
         <video id="luffy_edit_video" class="video" title="luffy edit" controls>
