--- a/html/notes1.html
+++ b/html/notes1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>My Notes 1</title>
-        <link rel="stylesheet" href="/css/cssForLinks.css">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <pre>
