--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title> Welcome Page </title>
-        <link rel="stylesheet" href="css/cssForLinks.css">
-        <link rel="stylesheet" href="/css/index.css">
-        <style>
-            #linksContainer{
-                position: absolute;
-                top: 30%;
-                left: 50%;
-            }
-        </style>
+        <link rel="stylesheet" href="/css/style.css">
     </head>
 
     <body>
-        <div id="linksContainer">
+        <div id="centerContainer">
 
-            <a class="links" href="html/notes1.html"> Notes1</a><br><br>
+            <a class="links" href="html/notes1.html">My Notes 1</a><br><br>
+            <a class="links" href="html/notes2.html">My Notes 2</a><br><br>
             <a class="links" href="html/mediaAndInteractiveElements.html"> Watch Media Content</a><br><br>
             <a class="links" href="html/contactUs.html"> Contact Us</a><br><br>
             <a class="links" href="html/downloadMedia.html"> Download Content</a><br><br>
