adding little bit css

--- a/html/notes2.html
+++ b/html/notes2.html
@@ -9,6 +9,7 @@
 <body>
 
     <ol>
+        <!-- first point in notes -->
         <li>
             <dl>
                 <dt>we can use the multiple classes in an element</dt>
@@ -16,6 +17,7 @@
                 <dd>&lt;p class="highlight customColourForLinks"&gt;</dd>
             </dl>
         </li>
+        <!-- second point in notes -->
         <li>
             <dl>
                 <dt>we can use various types of selectors in css such as</dt>
@@ -25,9 +27,91 @@
                         <li>class selector( . ): we can use an . symbol to call with class name like .highlight{}</li>
                         <li>id selector ( # ): we can use an # symbol to call with the id name like #importan_note1</li>
                         <li>universal selector ( * ): we can use an * symbol to make changes universal and it will affect every single element in the file which is to that css</li>
+                        <li>
+                            <dl>
+                                <dt>Group Selector : we can use Group collection in css we can use , to seprate selections and they can have same type of class</dt>
+                                <dd>example selecting by id #first, #second{} or by class .class1, .class2{}</dd>
+                            </dl>
+                        </li>
+                        <li>
+                            <dl>
+                                <dt>Nesed Selector ( &gt; ): it can be used to nest the css elements</dt>
+                                <dd>example #first>.class1>p{}</dd>
+                                <dd>&gt; : this operator in this context is known as child combinator</dd>
+                                <dd>
+                                    <p> <h4> In Mordern Css This is Valid </h4>
+                                        #first { <br>
+                                          > .class1 { <br>
+                                            > p { <br>
+                                              /* Your styles go here */ <br>
+                                              color: green; <br>
+                                            } <br>
+                                          } <br>
+                                        } <br>
+                                    </p>
+                                </dd>
+                            </dl>
+                        </li>
                     </ol>
                 </dd>
             </dl>
+        </li>
+        <!-- third point in notes -->
+        <li>
+            <dl>
+                <dt>priority in the css is :</dt>
+                <dd> Rule 1: based on thr selector :
+                    <table border="4" align="center" cellpadding="10px">
+
+                        <thead>
+
+                            <tr>
+                                <th>Selector Types</th>
+                                <th>Example</th>
+                                <th>Specifcity Value</th>
+                            </tr>
+
+                        </thead>
+
+                        <tbody>
+
+                            <tr>
+                                <td>Inline styles</td>
+                                <td>&lt;p style="color:red"&gt;</td>
+                                <td>1000</td>
+                            </tr>
+
+                            <tr>
+                                <td>ID selector</td>
+                                <td>#id</td>
+                                <td>100</td>
+                            </tr>
+
+                            <tr>
+                                <td>Class / attribute / pseudo-class</td>
+                                <td>.class, [type="text"], :hover</td>
+                                <td>10</td>
+                            </tr>
+
+                            <tr>
+                                <td>Element / pseudo-element</td>
+                                <td>p, ::before</td>
+                                <td>1</td>
+                            </tr>
+
+                            <tr>
+                                <td>Universal selector</td>
+                                <td>*</td>
+                                <td>0</td>
+                            </tr>
+
+                        </tbody>
+
+                    </table>
+                </dd>
+                <dd>Rule 2: If two rules have equal importance and specificity, the last one written in the CSS file wins.</dd>
+            </dl>
+           
         </li>
     </ol>
 
