--- a/html/tablesAndDataRepresentation.html
+++ b/html/tablesAndDataRepresentation.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
     <body>
-        <table border="4">
+        <table border="4" align="center">
             <caption>Basic fruits list (this is an caption given by caption tag for google seo and screen readers)</caption>
             
             <thead>
@@ -22,10 +22,10 @@
 
             <tbody>
 
-                <tr>
-                    <td>banana</td>
-                    <td>yellow</td>
-                    <td>60</td>
+            <tr>
+                <td>banana</td>
+                <td>yellow</td>
+                <td>60</td>
             </tr>
             <tr>
                 <td>Apple</td>
