--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <body>
         <div id="centerContainer">
 
-            <a class="links" href="html/notes1.html">My Notes 1</a><br><br>
-            <a class="links" href="html/notes2.html">My Notes 2</a><br><br>
-            <a class="links" href="html/mediaAndInteractiveElements.html"> Watch Media Content</a><br><br>
-            <a class="links" href="html/contactUs.html"> Contact Us</a><br><br>
-            <a class="links" href="html/downloadMedia.html"> Download Content</a><br><br>
-            <a class="links" href="html/listPage.html"> List Page</a><br><br>
-            <a class="links" href="html/attributes.html">attributes</a><br><br>
-            <a class="links" href="html/grouping.html">grouping</a><br><br>
-            <a class="links" href="html/formsAndUserInput.html">forms and user Input</a><br><br>
-            <a class="links" href="html/tablesAndDataRepresentation.html">tables and data representation</a><br><br>
-            <a class="links" href="html/myFirstHtmlPage.html">my First HTML page</a><br><br>
-            <a class="links" href="html/merging.html">merging in tables</a><br><br>
+            <a class="links hyperlink_table" href="html/notes1.html">My Notes 1</a><br><br>
+            <a class="links hyperlink_table" href="html/notes2.html">My Notes 2</a><br><br>
+            <a class="links hyperlink_table" href="html/mediaAndInteractiveElements.html"> Watch Media Content</a><br><br>
+            <a class="links hyperlink_table" href="html/contactUs.html"> Contact Us</a><br><br>
+            <a class="links hyperlink_table" href="html/downloadMedia.html"> Download Content</a><br><br>
+            <a class="links hyperlink_table" href="html/listPage.html"> List Page</a><br><br>
+            <a class="links hyperlink_table" href="html/attributes.html">attributes</a><br><br>
+            <a class="links hyperlink_table" href="html/grouping.html">grouping</a><br><br>
+            <a class="links hyperlink_table" href="html/formsAndUserInput.html">forms and user Input</a><br><br>
+            <a class="links hyperlink_table" href="html/tablesAndDataRepresentation.html">tables and data representation</a><br><br>
+            <a class="links hyperlink_table" href="html/myFirstHtmlPage.html">my First HTML page</a><br><br>
+            <a class="links hyperlink_table" href="html/merging.html">merging in tables</a><br><br>
+            <a class="links hyperlink_table" href="html/religion.html">Know More In Religion</a><br><br>
             
         </body>
     </div>
