chaging class names and learning css

--- a/html/attributes.html
+++ b/html/attributes.html
@@ -51,6 +51,6 @@
         </li>
     </ol>
     <hr>
-    <a class="links" href="../index.html"> Back To Home page</a>
+    <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
 </body>
 </html>
