--- a/html/contactUs.html
+++ b/html/contactUs.html
@@ -10,6 +10,6 @@
         <a href="tel:+910123456789">Call Me</a><br>
         <a href="https://api.whatsapp.com/send?phone=0123456789&text=Hello,%20Aarnav%20How're%20You%20I%20am%20your_name">Whatsapp Me</a><br>
         <hr>
-        <a class="links" href="../index.html"> Back To Home page</a>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
