--- a/html/downloadMedia.html
+++ b/html/downloadMedia.html
@@ -6,19 +6,19 @@
     <link rel="stylesheet" href="../css/cssForLinks.css">
 </head>
     <body>
-        <a class="links" href="../downloadables/EmptyPDF.pdf" download>Download pdf(EMPTY)</a><br>
-        <a class="links" href="../downloadables/SomeText.txt" download>Download txt(READ IT)</a><br>
-        <a class="links" href="../media/blinks_no_sake.mp3" download>blink no sake-(one piece) song</a><br>
-        <a class="links" href="../media/zoro.jpeg" download>download zoro image</a><br>
-        <a class="links" href="../media/nami.jpeg" download>download nami image</a><br>
-        <a class="links" href="../media/sanji.jpeg" download>download sanji image</a><br>
-        <a class="links" href="../media/chopper.jpeg" download>download chopper image</a><br>
-        <a class="links" href="../media/robin.avif" download>download robin image</a><br>
-        <a class="links" href="../media/franky.jpeg" download>download franky image</a><br>
-        <a class="links" href="../media/brook.jpeg" download>download brook image</a><br>
-        <a class="links" href="../media/jinbei.jpeg" download>download jinbei image</a><br>
-        <a class="links" href="../media/boa.avif" download>download boa hancock image</a><br>
+        <a class="hyperlink-as-button" href="../downloadables/EmptyPDF.pdf" download>Download pdf(EMPTY)</a><br>
+        <a class="hyperlink-as-button" href="../downloadables/SomeText.txt" download>Download txt(READ IT)</a><br>
+        <a class="hyperlink-as-button" href="../media/blinks_no_sake.mp3" download>blink no sake-(one piece) song</a><br>
+        <a class="hyperlink-as-button" href="../media/zoro.jpeg" download>download zoro image</a><br>
+        <a class="hyperlink-as-button" href="../media/nami.jpeg" download>download nami image</a><br>
+        <a class="hyperlink-as-button" href="../media/sanji.jpeg" download>download sanji image</a><br>
+        <a class="hyperlink-as-button" href="../media/chopper.jpeg" download>download chopper image</a><br>
+        <a class="hyperlink-as-button" href="../media/robin.avif" download>download robin image</a><br>
+        <a class="hyperlink-as-button" href="../media/franky.jpeg" download>download franky image</a><br>
+        <a class="hyperlink-as-button" href="../media/brook.jpeg" download>download brook image</a><br>
+        <a class="hyperlink-as-button" href="../media/jinbei.jpeg" download>download jinbei image</a><br>
+        <a class="hyperlink-as-button" href="../media/boa.avif" download>download boa hancock image</a><br>
         <hr>
-        <a class="links" href="../index.html"> Back To Home page</a>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
