--- a/html/grouping.html
+++ b/html/grouping.html
@@ -47,6 +47,6 @@
             <p>it is used for copyright and content information </p>
         </footer>
         <hr>
-        <a class="links" href="../index.html"> Back To Home page</a>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
