--- a/html/mediaAndInteractiveElements.html
+++ b/html/mediaAndInteractiveElements.html
@@ -5,6 +5,37 @@
     <title>Media</title>
     <link rel="stylesheet" href="../css/mediaAndInteractiveElements.css">
     <link rel="stylesheet" href="/css/style.css">
+    <style>
+        img{   
+            width: 400px;
+            height: 180px;
+            object-fit:fill;
+            border-radius: 20px;
+            margin: 50px;
+        }
+
+        #luffy_edit_video{
+            width: 500px;
+            height: auto;
+            object-fit:cover;
+            object-position: top center;
+            border-radius: 40px;
+            margin: 50px;
+        }
+        #blinks_no_sake_audio{
+            accent-color: rgb(42, 50, 52);
+            margin: 50px;
+        }
+
+        #luffy_edit_iframe{
+            width: 500px;
+            height: 281.25px;
+            object-fit:cover;
+            object-position: top center;
+            border-radius: 40px;
+            margin: 50px;
+        }
+    </style>
 </head>
     <body>
         <video id="luffy_edit_video" class="video" title="luffy edit" controls>
@@ -31,18 +62,18 @@
         </iframe>
 
         <br>
-        <img id="franky" class="image" src="../media/zoro.jpeg" alt="sorry! its unavailable right now" title="i know Boa hancock is cute">
-        <img id="nami" class="image" src="../media/nami.jpeg" alt="sorry! its unavailable right now" title="i know nami cute">
-        <img id="franky" class="image" src="../media/usopp.webp" alt="sorry! its unavailable right now" title="i know Boa hancock is cute">
-        <img id="franky" class="image" src="../media/sanji.jpeg" alt="sorry! its unavailable right now" title="i know Boa hancock is cute">
-        <img id="chopper" class="image" src="../media/chopper.jpeg" alt="sorry! its unavailable right now" title="i know Boa hancock is cute">
-        <img id="franky" class="image" src="../media/franky.jpeg" alt="sorry! its unavailable right now" title="i know Boa hancock is cute">
-        <img id="brook" class="image" src="../media/brook.jpeg" alt="sorry! its unavailable right now" title="i know Boa hancock is cute">
-        <img id="robin" class="image" src="../media/robin.avif" alt="sorry! its unavailable right now" title="i know Robin is cute">
-        <img id="franky" class="image" src="../media/jinbei.jpeg" alt="sorry! its unavailable right now" title="i know Boa hancock is cute">
+        <img src="../media/zoro.jpeg" alt="sorry! its unavailable right now" title="it' zoro">
+        <img src="../media/nami.jpeg" alt="sorry! its unavailable right now" title="i know nami cute">
+        <img src="../media/usopp.webp" alt="sorry! its unavailable right now" title="it's god usopp">
+        <img src="../media/sanji.jpeg" alt="sorry! its unavailable right now" title="it's vinsmoke sanji ">
+        <img src="../media/chopper.jpeg" alt="sorry! its unavailable right now" title="it's tony tony chopper">
+        <img src="../media/franky.jpeg" alt="sorry! its unavailable right now" title="it's franky suuuperrrrrrrrrr">
+        <img src="../media/brook.jpeg" alt="sorry! its unavailable right now" title="it's brook- yoho hoo ho ho ho">
+        <img src="../media/robin.avif" alt="sorry! its unavailable right now" title="i know Robin is cute">
+        <img src="../media/jinbei.jpeg" alt="sorry! its unavailable right now" title="it's jinbei">
         
         <hr>
-        <a class="links" href="../index.html"> Back To Home page</a>  
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>  
 
     </body>
 </html>
