--- a/html/merging.html
+++ b/html/merging.html
@@ -210,6 +210,6 @@
         </table>
         
         <hr>
-        <a class="links" href="../index.html"> Back To Home page</a>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
