--- a/html/notes1.html
+++ b/html/notes1.html
@@ -155,6 +155,6 @@ like Google to understand and index images.
 
         </pre>
         <hr>
-        <a class="links" href="../index.html"> Back To Home page</a>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
