--- a/html/tablesAndDataRepresentation.html
+++ b/html/tablesAndDataRepresentation.html
@@ -96,6 +96,6 @@
             <li>Notes: that there can be multiple body but there can only be 1 thead(table head) and only 1 tfoot(table footer)</li>
         </ol>
         <hr>
-        <a class="links" href="../index.html"> Back To Home page</a>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
