--- a/html/formsAndUserInput.html
+++ b/html/formsAndUserInput.html
@@ -218,7 +218,7 @@
 
         </div>
         <hr>
-        <a class="links" href="../index.html"> Back To Home page</a>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
 <!--
