--- a/html/listPage.html
+++ b/html/listPage.html
@@ -31,7 +31,7 @@
     </dl>
 
         <hr>
-        <a class="links" href="../index.html"> Back To Home page</a>
+        <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
     </body>
 </html>
 <!--
