--- a/html/notes2.html
+++ b/html/notes2.html
@@ -56,7 +56,7 @@
             <ol>
                 <li>
                     Rule 1: based on thr selector :
-                    <table border="4" align="center" cellpadding="10px">   
+                    <table border="4" cellpadding="10px">   
                             <thead>
                                 <tr>
                                 <th>Selector Types</th>
@@ -132,10 +132,60 @@
             </p>
         </li>
 
+        <li>
+            <h3>CSS Units Reference Tables</h3>
+
+    <!-- Absolute Units Table -->
+    <h4>1️⃣ Absolute Units</h4>
+    <table id="table1" border="4" cellpadding="10px">
+        <thead>
+            <tr>
+                <th>Unit</th>
+                <th>Description</th>
+                <th>Example</th>
+                <th>Notes</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td><code>px</code></td><td>Pixels</td><td><code>font-size: 16px;</code></td><td>Most common; 1px ≈ one screen pixel.</td></tr>
+            <tr><td><code>pt</code></td><td>Points</td><td><code>font-size: 12pt;</code></td><td>1pt = 1/72 inch; used in print.</td></tr>
+            <tr><td><code>cm</code></td><td>Centimeters</td><td><code>width: 10cm;</code></td><td>Rare in web layouts.</td></tr>
+            <tr><td><code>mm</code></td><td>Millimeters</td><td><code>height: 50mm;</code></td><td>Also rarely used.</td></tr>
+            <tr><td><code>in</code></td><td>Inches</td><td><code>width: 2in;</code></td><td>1in = 96px.</td></tr>
+            <tr><td><code>pc</code></td><td>Picas</td><td><code>font-size: 1pc;</code></td><td>1pc = 12pt ≈ 16px.</td></tr>
+        </tbody>
+    </table>
+
+    <!-- Relative Units Table -->
+    <h4>2️⃣ Relative Units</h4>
+    <table id="table2" border="4" cellpadding="10px">
+        <thead>
+            <tr>
+                <th>Unit</th>
+                <th>Relative To</th>
+                <th>Example</th>
+                <th>Common Use</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td><code>%</code></td><td>Parent element</td><td><code>width: 50%;</code></td><td>Responsive width/height.</td></tr>
+            <tr><td><code>em</code></td><td>Font size of the parent</td><td><code>font-size: 2em;</code></td><td>Scales with parent font size.</td></tr>
+            <tr><td><code>rem</code></td><td>Font size of the root element</td><td><code>font-size: 1.5rem;</code></td><td>Consistent font scaling.</td></tr>
+            <tr><td><code>vw</code></td><td>1% of viewport width</td><td><code>width: 50vw;</code></td><td>Responsive layouts.</td></tr>
+            <tr><td><code>vh</code></td><td>1% of viewport height</td><td><code>height: 100vh;</code></td><td>Full-height sections.</td></tr>
+            <tr><td><code>vmin</code></td><td>Smaller of vw or vh</td><td><code>font-size: 5vmin;</code></td><td>Keeps proportions.</td></tr>
+            <tr><td><code>vmax</code></td><td>Larger of vw or vh</td><td><code>font-size: 5vmax;</code></td><td>Opposite of vmin.</td></tr>
+            <tr><td><code>ch</code></td><td>Width of “0” character</td><td><code>width: 60ch;</code></td><td>Good for text length limits.</td></tr>
+            <tr><td><code>ex</code></td><td>Height of “x” character</td><td><code>line-height: 2ex;</code></td><td>Rarely used.</td></tr>
+        </tbody>
+    </table>
+
+        </li>
+
     </ol>
 
     <hr>
-    <a class="links" href="../index.html"> Back To Home page</a>
+    <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
 
 </body>
 </html>
