--- a/html/religion.html
+++ b/html/religion.html
@@ -7,42 +7,42 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <table border="2" align="center" cellpadding="10px">
+    <table border="2" cellpadding="10px">
         <caption>Hindu Dharma</caption>
         <thead>
             <tr>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Vedas">Ved</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Yuga">Yug</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Varna_(Hinduism)">Varn</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Vedas">Ved</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Yuga">Yug</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Varna_(Hinduism)">Varn</a></th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Rigveda">Rigveda</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Satya_Yuga">Satyug</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Brahmin">Brahmins</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Rigveda">Rigveda</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Satya_Yuga">Satyug</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Brahmin">Brahmins</a></th>
             </            tr>
 
             <tr>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Yajurveda">Yajurveda</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Treta_Yuga">Tretayug</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Kshatriya">Kshatriyas</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Yajurveda">Yajurveda</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Treta_Yuga">Tretayug</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Kshatriya">Kshatriyas</a></th>
             </tr>
             
             <tr>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Samaveda">Samaveda</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Dvapara_Yuga">Dvaparyug</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Vaishya">Vaishyas</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Samaveda">Samaveda</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Dvapara_Yuga">Dvaparyug</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Vaishya">Vaishyas</a></th>
             </tr>
             
             <tr>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Atharvaveda">Atharvaveda</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Kali_Yuga">Kaliyug</a></th>
-                <th><a class="hyperlink_table" href="https://en.wikipedia.org/wiki/Shudra">Shudras</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Atharvaveda">Atharvaveda</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Kali_Yuga">Kaliyug</a></th>
+                <th><a class="hyperlink-in-table" href="https://en.wikipedia.org/wiki/Shudra">Shudras</a></th>
             </tr>
         </tbody>
     </table>
     <hr>
-    <a class="links" href="../index.html"> Back To Home page</a>
+    <a class="hyperlink-as-button" href="../index.html"> Back To Home page</a>
 </body>
 </html>
