--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     </head>
 
     <body>
-        <div id="centerContainer">
+        <div id="index_html_link_container">
 
-            <a class="links hyperlink_table" href="html/notes1.html">My Notes 1</a><br><br>
-            <a class="links hyperlink_table" href="html/notes2.html">My Notes 2</a><br><br>
-            <a class="links hyperlink_table" href="html/mediaAndInteractiveElements.html"> Watch Media Content</a><br><br>
-            <a class="links hyperlink_table" href="html/contactUs.html"> Contact Us</a><br><br>
-            <a class="links hyperlink_table" href="html/downloadMedia.html"> Download Content</a><br><br>
-            <a class="links hyperlink_table" href="html/listPage.html"> List Page</a><br><br>
-            <a class="links hyperlink_table" href="html/attributes.html">attributes</a><br><br>
-            <a class="links hyperlink_table" href="html/grouping.html">grouping</a><br><br>
-            <a class="links hyperlink_table" href="html/formsAndUserInput.html">forms and user Input</a><br><br>
-            <a class="links hyperlink_table" href="html/tablesAndDataRepresentation.html">tables and data representation</a><br><br>
-            <a class="links hyperlink_table" href="html/myFirstHtmlPage.html">my First HTML page</a><br><br>
-            <a class="links hyperlink_table" href="html/merging.html">merging in tables</a><br><br>
-            <a class="links hyperlink_table" href="html/religion.html">Know More In Religion</a><br><br>
+            <a class="hyperlink-as-button" href="html/notes1.html">My Notes 1</a><br><br>
+            <a class="hyperlink-as-button" href="html/notes2.html">My Notes 2</a><br><br>
+            <a class="hyperlink-as-button" href="html/notes3.html">My Notes 3</a><br><br>
+            <a class="hyperlink-as-button" href="html/mediaAndInteractiveElements.html"> Watch Media Content</a><br><br>
+            <a class="hyperlink-as-button" href="html/contactUs.html"> Contact Us</a><br><br>
+            <a class="hyperlink-as-button" href="html/downloadMedia.html"> Download Content</a><br><br>
+            <a class="hyperlink-as-button" href="html/listPage.html"> List Page</a><br><br>
+            <a class="hyperlink-as-button" href="html/attributes.html">attributes</a><br><br>
+            <a class="hyperlink-as-button" href="html/grouping.html">grouping</a><br><br>
+            <a class="hyperlink-as-button" href="html/formsAndUserInput.html">forms and user Input</a><br><br>
+            <a class="hyperlink-as-button" href="html/tablesAndDataRepresentation.html">tables and data representation</a><br><br>
+            <a class="hyperlink-as-button" href="html/myFirstHtmlPage.html">my First HTML page</a><br><br>
+            <a class="hyperlink-as-button" href="html/merging.html">merging in tables</a><br><br>
+            <a class="hyperlink-as-button" href="html/religion.html">Know More In Religion</a><br><br>
             
         </body>
     </div>
