style.css changes

--- a/html/downloadMedia.html
+++ b/html/downloadMedia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Download the Media</title>
-    <link rel="stylesheet" href="../css/cssForLinks.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
     <body>
         <a class="hyperlink-as-button" href="../downloadables/EmptyPDF.pdf" download>Download pdf(EMPTY)</a><br>
